# loggenerate

./: CLAUDE.md  README.md  pyproject.toml
loggenerate/: __main__.py  cli.py  models.py  utils.py
loggenerate/apps/: __init__.py  base.py  f5bigip.py  fortinet.py  generic.py  paloalto.py
loggenerate/formats/: __init__.py  cef.py  rfc3164.py  rfc5424.py
loggenerate/senders/: __init__.py  base.py  file.py  network.py  stdout.py
